# GPT-SoVITS

./: .gitignore  0-webui.bat  0train.sh  1-直接推理.bat  1-训练.bat  1uvr.sh  2-变声器.bat  2-推理GUI.bat  2-推理api.bat  3-字幕切分.bat  3-推理.bat  3-推理pyside.bat  3-推理pysideGUI.bat  3-推理tkinter.bat  3-音频降噪增强.bat  3webui.sh  4-uvr5.bat  4-字幕切分工具.bat  5-切分打标.bat  README-MVC.md  README.md  README_tkinter.md  api_fox.py  api_fox_ui.py  app.py  enhance.py  gen_sample.py  gpt_sovits_api_simple.py  gpt_sovits_example.py  gpt_sovits_gui.py  gpt_sovits_pyside_app.py  pyproject.toml  pyside_app.py  requirements-fox.txt  requirements.txt  ruff.toml  setup.py  srt_asr.py  tkinter_app.py  tkinter_ui.py  (+2 more)
GPT_SoVITS/: gen_refwavs.py  inference_webui.py  inference_webui_ex.py  inference_webui_old.py
GPT_SoVITS/TTS_infer_pack/: TextPreprocessor.py
GPT_SoVITS/configs/: tts_infer.yaml
GPT_SoVITS/text/: additional_chinese.py  chinese.py  cleaner.py  pinyin_ex.py
fox/: correct_words.json  futils.py  setenv.py  srt_asr.py  tts.py
gpt_sovits_inference/: README.md  __init__.py  example.py  inference.py
gpt_sovits_inference/audio/: __init__.py  audio_processing.py  feature_extraction.py
gpt_sovits_inference/models/: __init__.py  model_loader.py  vocoder.py
gpt_sovits_inference/text/: __init__.py  cutting.py  text_processing.py
gpt_sovits_inference/utils/: __init__.py  helper.py
gpt_sovits_lib/: __init__.py  config.py  core.py  utils.py
gui/: .gitignore  README.md  __init__.py  controllers.py  main.py  main_window.py  models.py  requirements-gui.txt  views.py  word_replace.txt
gui/components/: __init__.py  audio_player.py  draggable_widgets.py  history_list.py  optimized_widgets.py
gui/controllers/: __init__.py  base_controller.py  experiment_controller.py  inference_controller.py  role_controller.py  word_replace_controller.py
gui/models/: __init__.py  config_applier.py  experiment_model.py  inference_engines.py  inference_model.py  inference_request_handler.py  inference_worker.py  model_manager.py  progress_manager.py  role_model.py  text_processor.py  word_replace_model.py
gui/tabs/: __init__.py  experiment_tab.py  replace_tab.py  role_tab.py
gui/views/: __init__.py  experiment_tab.py  inference_view.py  replace_tab.py  role_tab.py  role_view.py  word_replace_view.py
gui/views/common/: __init__.py  waveform_canvas.py
pyside_ui/: __init__.py  main.py
pyside_ui/controllers/: __init__.py  config_controller.py  role_management_controller.py  text_file_controller.py
pyside_ui/tabs/: __init__.py  config_tab.py  role_management_tab.py  text_file_tab.py
tools/: dict_editor.py  subfix_webui.py
ui/: api_client.py  main.py  migrate_roles.py  models.py  roles.py  text_processing.py  utils.py
ui/tabs/: config.py  role_management.py  single_text.py  text_file.py
webui/: app.py  text_replace_rules.txt
webui/models/: __init__.py  audio_processor.py  audio_utils.py  cache_manager.py  constand.py  logger.py  model_loader.py  text_processor.py  text_utils.py
webui/services/: gptsovits_server.py  prompt_service.py
webui/ui/: event_handlers.py  main_ui.py
