[project]
name = "gpt-sovits"
version = "0.1.0"
description = "GPT-SoVITS声音克隆与转换工具"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "numpy<2.0",
    "scipy",
    "tensorboard",
    "librosa==0.9.2",
    "numba",
    "pytorch-lightning>=2.4",
    "gradio>=4.41,<5",
    "ffmpeg-python",
    "onnxruntime; sys_platform == 'darwin'",
    "onnxruntime-gpu; sys_platform != 'darwin'",
    "tqdm",
    "funasr==1.0.27",
    "cn2an",
    "pypinyin",
    "pyopenjtalk>=0.4.1",
    "g2p_en",
    "modelscope==1.10.0",
    "sentencepiece",
    "transformers>=4.43",
    "peft",
    "chardet",
    "PyYAML",
    "psutil",
    "jieba_fast",
    "jieba",
    "split-lang",
    "fast_langdetect>=0.3.1",
    "wordsegment",
    "rotary_embedding_torch",
    "ToJyutping",
    "g2pk2",
    "ko_pron",
    "opencc; sys_platform != 'linux'",
    "opencc==1.1.1; sys_platform == 'linux'",
    "python_mecab_ko; sys_platform != 'win32'",
    "fastapi[standard]>=0.115.1",
    "x_transformers",
    "torchmetrics<=1.5",
    "pydantic<=2.10.6",
    "ctranslate2>=4.0,<5",
    "huggingface_hub>=0.13",
    "tokenizers>=0.13,<1",
    "av>=11",
    # GUI依赖
    "PySide6>=6.5.0",
    "soundfile>=0.12.1"
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
