[project]
name = "gpt-sovits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=11",
    "chardet>=5.2.0",
    "cn2an>=0.5.23",
    "ctranslate2>=4.0,<5",
    "fast-langdetect>=0.3.1",
    "fastapi[standard]>=0.115.2",
    "ffmpeg-python>=0.2.0",
    "funasr==1.0.27",
    "g2p-en>=2.1.0",
    "g2pk2>=0.0.3",
    "gradio<5",
    "huggingface-hub>=0.13",
    "jieba>=0.42.1",
    "jieba-fast>=0.53",
    "ko-pron>=1.3",
    "librosa==0.10.2",
    "modelscope==1.10.0",
    "numba>=0.61.2",
    "numpy<2.0",
    "onnxruntime>=1.22.0 ; sys_platform == 'darwin'",
    "onnxruntime-gpu>=1.22.0 ; sys_platform != 'darwin'",
    "opencc==1.1.1 ; sys_platform == 'linux'",
    "opencc>=1.1.1 ; sys_platform != 'linux'",
    "peft>=0.15.2",
    "psutil>=7.0.0",
    "pydantic<=2.10.6",
    "pyopenjtalk>=0.4.1",
    "pypinyin>=0.54.0",
    "python-mecab-ko>=1.3.7 ; sys_platform != 'win32'",
    "pytorch-lightning>=2.4",
    "pyyaml>=6.0.2",
    "rotary-embedding-torch>=0.8.6",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.0",
    "split-lang>=2.1.0",
    "tensorboard>=2.19.0",
    "tojyutping>=3.2.0",
    "tokenizers>=0.13,<1",
    "torch",
    "torchaudio",
    "torchmetrics<=1.5",
    "torchvision",
    "tqdm>=4.67.1",
    "transformers>=4.43",
    "wordsegment>=1.3.1",
    "x-transformers>=2.3.5",
]


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128/"
# Set explicit = true for the PyTorch index as well.
explicit = true

[tool.uv.sources]
"torch" = { index = "pytorch" }
"torchvision" = { index = "pytorch" }
"torchaudio" = { index = "pytorch" }


[tool.ruff]
lint.ignore = ["E402"]
